# bubbles-motion-planning

./: .gitignore  CMakeLists.txt  LICENSE  README.md  biicode.conf  compile_protos.sh  pqp.patch
bubblesmp/: BUILD  bubble-tree.cc  bubble-tree.h  bubble_test.cc  classic-tree.cc  classic-tree.h  crawling-bubble-tree.cc  crawling-bubble-tree.h  greedy-bubble-tree.cc  greedy-bubble-tree.h  greedy-classic-tree.cc  greedy-classic-tree.h  point-index.cc  point-index.h  rrt-tree.cc  rrt-tree.h  rrt.cc  rrt.h  rrtoptimize.cc  rrtplan.cc  task.proto  tree-node.cc
bubblesmp/environment/: BUILD  environment-feedback.cc  environment-feedback.h  environment-feedback_test.cc  fcl-environment.cc  fcl-environment.h  fcl-environment_test.cc
bubblesmp/generators/: BUILD  halton-sequence-generator.h  halton-sequence-generator_test.cc
proto/: task.proto
src/: BUILD  CMakeLists.txt  bubble-main.cc  bubble-rrt.cc  bubble-rrt.h  bubble-tree.cc  bubble-tree.h  bubble.cc  bubble.h  bubble_test.cc  classic-main.cc  classic-tree.cc  classic-tree.h  compare-main.cc  crawling-bubble-tree.cc  drawing-octave.cc  example-main.cc  greedy-bubble-tree.h  index.proto  point-index.cc  point-index.h  random-point-generator-interface.h  rrt-tree.cc  rrt-tree.h  rrt.cc  rrt.h  rrtplan.cc  task.proto  tree-node.h  twoseg-bubble-main.cc  twoseg-classic-main.cc  twoseg-compare-main.cc
src/environment/: BUILD  CMakeLists.txt  bubble-source-interface.h  environment-feedback-interface.h  environment-feedback.cc  environment-feedback.h  environment-feedback_test.cc  environment-interface.h  environment.proto  fcl-environment.cc  fcl-environment.h  fcl-environment_test.cc  make-environment.cc  make-environment.h  pqp-environment-feedback.cc  pqp-environment-feedback.h  pqp-environment-feedback_test.cc  pqp-environment.cc  pqp-environment.h  pqp-environment_test.cc  robot-interface.h
src/environment/simple/: CMakeLists.txt  abb-irb120-manipulator.cc  abb-irb120-manipulator.h  abb-irb120-manipulator_test.cc  bubble-source.cc  bubble-source.h  bubble-source_test.cc  obstacle-interface.h  obstacle-rectangle.cc  obstacle-rectangle.h  obstacle-rectangle_test.cc  obstacle-sphere.cc  obstacle-sphere.h  obstacle-sphere_test.cc  planar-2seg-bubble-source_test.cc  planar-2seg-manipulator.cc  planar-2seg-manipulator.h  planar-2seg-manipulator_test.cc  robot-interface.h
src/generators/: BUILD  CMakeLists.txt  generator.proto  halton-sequence-generator.cc  halton-sequence-generator.h  make-generator.cc  make-generator.h  simple-generator.cc  simple-generator.h
src/transforms/: BUILD  CMakeLists.txt  transformation.cc  transformation.h  transformation_test.cc
tools/protobuf/: protobuf.bzl
